--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,9 +6,11 @@ body, h1, h2, h3, p, ul, li {
 }
 
 body {
-    background-color: #f4f4f4;
+    background: linear-gradient(45deg, #4298ee, #000000);
     color: #333;
-    line-height: 1.6;
+    font-size: 18px;
+    line-height: 1.5;
+    overflow-x: hidden;
 }
 
 /* Navigation */
