--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -104,7 +104,7 @@ section {
 }
 
 header {
-    background-image: linear-gradient(to bottom right, #50b3a2, #78c4d4);
+    background-image: linear-gradient(45deg, #4298ee, #000000);
 }
 
 #contact {
